--- a/index.html
+++ b/index.html
@@ -1,80 +1,141 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ระบบตรวจสอบครุภัณฑ์</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css" />
   <style>
+    /* ===== 🌈 โทนสีหลัก ===== */
+    :root {
+      --main-blue: #0a3d62;
+      --accent-blue: #3c6382;
+      --light-blue: #82ccdd;
+      --light-gray: #f4f6f8;
+      --white: #ffffff;
+    }
+
     body {
       font-family: "Prompt", sans-serif;
       margin: 0;
-      background: #f4f6f8;
+      background: var(--light-gray);
+      color: #333;
     }
 
+    /* ===== Header ===== */
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: #004aad;
-      color: white;
-      padding: 10px 20px;
+      background: var(--main-blue);
+      color: var(--white);
+      padding: 12px 20px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .logo {
+      font-weight: bold;
+      font-size: 1.2em;
+    }
+
+    h1 {
+      font-size: 1.3em;
+      margin: 0;
+    }
+
+    .header-actions {
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
 
     .search-input {
       padding: 6px 10px;
       border-radius: 8px;
-      border: none;
+      border: 1px solid #ccc;
       outline: none;
+      transition: border-color 0.2s;
+    }
+
+    .search-input:focus {
+      border-color: var(--light-blue);
     }
 
     .login-btn {
-      background: white;
-      color: #004aad;
-      padding: 6px 12px;
+      background: var(--white);
+      color: var(--main-blue);
+      padding: 6px 14px;
       border-radius: 8px;
       text-decoration: none;
-      margin-left: 10px;
       font-weight: bold;
+      transition: background 0.2s;
     }
 
+    .login-btn:hover {
+      background: var(--light-blue);
+      color: var(--white);
+    }
+
+    /* ===== ตาราง ===== */
     .table-section {
-      margin: 20px;
-      background: white;
+      margin: 30px auto;
+      background: var(--white);
       border-radius: 12px;
       padding: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      width: 90%;
+      max-width: 1000px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .table-header h2 {
+      color: var(--main-blue);
+      margin-bottom: 10px;
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
-    }
-
-    th, td {
-      border-bottom: 1px solid #ddd;
-      padding: 10px;
-      text-align: left;
+      border-radius: 8px;
+      overflow: hidden;
     }
 
     th {
-      background: #f0f0f0;
+      background: var(--accent-blue);
+      color: var(--white);
+      text-align: left;
+      padding: 10px;
+      font-weight: 500;
+    }
+
+    td {
+      padding: 10px;
+      border-bottom: 1px solid #eee;
+    }
+
+    tr:nth-child(even) {
+      background: #f9fbfc;
+    }
+
+    tr:hover {
+      background: #eef5f9;
     }
 
     .detail-btn {
-      background: #004aad;
-      color: white;
+      background: var(--main-blue);
+      color: var(--white);
       border: none;
-      padding: 5px 10px;
+      padding: 6px 12px;
       border-radius: 6px;
       cursor: pointer;
+      font-size: 0.9em;
+      transition: background 0.2s;
     }
 
     .detail-btn:hover {
-      background: #0062ff;
+      background: var(--accent-blue);
     }
 
-    /* Modal */
+    /* ===== Modal ===== */
     .modal {
       display: none;
       position: fixed;
@@ -84,17 +145,23 @@
       width: 100%;
       height: 100%;
       overflow: auto;
-      background: rgba(0,0,0,0.4);
+      background: rgba(0, 0, 0, 0.4);
     }
 
     .modal-content {
-      background: white;
-      margin: 10% auto;
+      background: var(--white);
+      margin: 8% auto;
       padding: 20px;
       border-radius: 12px;
       width: 80%;
-      max-width: 500px;
+      max-width: 450px;
       position: relative;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .modal-content h3 {
+      color: var(--main-blue);
+      margin-top: 0;
     }
 
     .close {
@@ -103,30 +170,23 @@
       top: 10px;
       cursor: pointer;
       font-size: 22px;
-      color: #555;
+      color: #777;
+      transition: color 0.2s;
+    }
+
+    .close:hover {
+      color: var(--accent-blue);
     }
 
     #errorBox {
       color: red;
-      margin-top: 10px;
+      margin: 10px 0;
       text-align: center;
       font-weight: bold;
     }
-
-    #sortBtn {
-      background: #ddd;
-      border: none;
-      padding: 6px 10px;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-left: 10px;
-    }
-
-    #sortBtn:hover {
-      background: #ccc;
-    }
   </style>
 </head>
+
 <body>
   <header>
     <div class="logo">LOGO</div>
@@ -141,7 +201,6 @@
     <section class="table-section">
       <div class="table-header">
         <h2>รายการครุภัณฑ์</h2>
-        <button id="sortBtn">เรียงลำดับ ↑↓</button>
       </div>
 
       <div id="errorBox"></div>
@@ -179,11 +238,9 @@
     const modal = document.getElementById("modal");
     const closeModal = document.getElementById("closeModal");
     const modalDetails = document.getElementById("modalDetails");
-    const sortBtn = document.getElementById("sortBtn");
     const errorBox = document.getElementById("errorBox");
 
     let data = [];
-    let ascending = true;
 
     async function loadEquipment() {
       try {
@@ -205,9 +262,7 @@
           details: r.c[5]?.v || ""
         }));
 
-        if (data.length === 0) {
-          throw new Error("ไม่พบข้อมูลในชีต SHOW");
-        }
+        if (data.length === 0) throw new Error("ไม่พบข้อมูลในชีต SHOW");
 
         renderTable();
         errorBox.textContent = "";
@@ -215,17 +270,14 @@
       } catch (error) {
         console.error("❌ โหลดข้อมูลไม่สำเร็จ:", error);
         tableBody.innerHTML = `<tr><td colspan="5" style="color:red;">ไม่สามารถโหลดข้อมูลได้</td></tr>`;
-        errorBox.textContent = "❌ เกิดข้อผิดพลาด: " + error.message;
+        errorBox.textContent = "❌ " + error.message;
       }
     }
 
     function renderTable(filteredData = data) {
-      filteredData.sort((a, b) =>
-        ascending ? a.number - b.number : b.number - a.number
-      );
-
       tableBody.innerHTML = filteredData
-        .map(e => `
+        .map(
+          e => `
           <tr>
             <td>${e.code}</td>
             <td>${e.name}</td>
@@ -233,7 +285,8 @@
             <td>${e.status}</td>
             <td><button class="detail-btn">ดูเพิ่มเติม</button></td>
           </tr>
-        `)
+        `
+        )
         .join("");
 
       document.querySelectorAll(".detail-btn").forEach((btn, i) => {
@@ -251,22 +304,18 @@
     }
 
     closeModal.onclick = () => (modal.style.display = "none");
-    window.onclick = e => { if (e.target == modal) modal.style.display = "none"; };
-
-    if (sortBtn) {
-      sortBtn.addEventListener("click", () => {
-        ascending = !ascending;
-        renderTable();
-      });
-    }
+    window.onclick = e => {
+      if (e.target == modal) modal.style.display = "none";
+    };
 
     searchInput.addEventListener("input", e => {
       const keyword = e.target.value.toLowerCase();
-      const filtered = data.filter(item =>
-        item.code.toLowerCase().includes(keyword) ||
-        item.name.toLowerCase().includes(keyword) ||
-        item.location.toLowerCase().includes(keyword) ||
-        item.status.toLowerCase().includes(keyword)
+      const filtered = data.filter(
+        item =>
+          item.code.toLowerCase().includes(keyword) ||
+          item.name.toLowerCase().includes(keyword) ||
+          item.location.toLowerCase().includes(keyword) ||
+          item.status.toLowerCase().includes(keyword)
       );
       renderTable(filtered);
     });
