--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       margin: 8% auto;
       padding: 20px;
       border-radius: 12px;
-      width: 80%;
-      max-width: 450px;
+      width: 90%;
+      max-width: 600px;
       position: relative;
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
     }
@@ -183,6 +183,17 @@
       margin: 10px 0;
       text-align: center;
       font-weight: bold;
+    }
+
+    .debug {
+      margin-top: 10px;
+      font-size: 12px;
+      color: #666;
+      background: #fff;
+      padding: 8px;
+      border-radius: 6px;
+      max-height: 120px;
+      overflow: auto;
     }
   </style>
 </head>
@@ -217,6 +228,8 @@
         </thead>
         <tbody></tbody>
       </table>
+
+      <div class="debug" id="debugBox" style="display:none;"></div>
     </section>
   </main>
 
@@ -231,6 +244,7 @@
   <script>
     const sheetID = "1bkpz-iG4B8qnvZc4ql4qE15Qw8HrIZ1aeX1vZQzMFy0";
     const sheetName = "SHOW";
+    // cache buster
     const baseURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}&t=${Date.now()}`;
 
     const tableBody = document.querySelector("#equipmentTable tbody");
@@ -239,30 +253,68 @@
     const closeModal = document.getElementById("closeModal");
     const modalDetails = document.getElementById("modalDetails");
     const errorBox = document.getElementById("errorBox");
+    const debugBox = document.getElementById("debugBox");
 
     let data = [];
+
+    // ฟังก์ชัน parse ที่ทนทานต่อรูปแบบ response ของ gviz
+    function parseGviz(text) {
+      // มองหาส่วน JSON ภายใน google.visualization.Query.setResponse(...)
+      const m = text.match(/google\.visualization\.Query\.setResponse\(([\s\S]+)\);?/);
+      if (m && m[1]) {
+        return JSON.parse(m[1]);
+      }
+
+      // fallback เก่า (บางครั้ง response ก็เริ่มด้วย /*O_o*/\n)
+      try {
+        const start = text.indexOf("{");
+        const end = text.lastIndexOf("}");
+        if (start !== -1 && end !== -1) {
+          const sub = text.substring(start, end + 1);
+          return JSON.parse(sub);
+        }
+      } catch (e) {
+        // ignore
+      }
+
+      throw new Error("ไม่พบข้อมูล JSON ใน response จาก Google Sheets");
+    }
 
     async function loadEquipment() {
       try {
         const res = await fetch(baseURL);
         const text = await res.text();
 
-        if (!text.startsWith("/*O_o*/")) {
-          throw new Error("ข้อมูลจาก Google Sheet ไม่ถูกต้องหรือยังไม่ได้เผยแพร่");
+        // debug: แสดงตัวอย่าง response บางส่วน ถ้าต้องการเปิดใช้ ให้ debugBox.style.display = "block";
+        debugBox.style.display = "none";
+        debugBox.textContent = text.slice(0, 800);
+
+        const json = parseGviz(text);
+
+        // ป้องกันกรณีไม่มี table/rows
+        if (!json.table || !json.table.rows) {
+          throw new Error("รูปแบบข้อมูลจากชีตไม่ถูกต้อง (ไม่มี table.rows)");
         }
 
-        const json = JSON.parse(text.substring(47).slice(0, -2));
+        // Map rows -> object (ตรวจสอบแต่ละเซลด้วย r.c[index])
+        data = json.table.rows.map((r, idx) => {
+          // สมมติ header ในชีตเป็น:
+          // col0 = number, col1 = code, col2 = name, col3 = location, col4 = status, col5 = details
+          return {
+            number: r.c[0]?.v ?? "",
+            code: r.c[1]?.v ?? "",
+            name: r.c[2]?.v ?? "",
+            location: r.c[3]?.v ?? "",
+            status: r.c[4]?.v ?? "",
+            details: r.c[5]?.v ?? "",
+            rawRowIndex: idx + 1
+          };
+        });
 
-        data = json.table.rows.map(r => ({
-          number: r.c[0]?.v || "",
-          code: r.c[1]?.v || "",
-          name: r.c[2]?.v || "",
-          location: r.c[3]?.v || "",
-          status: r.c[4]?.v || "",
-          details: r.c[5]?.v || ""
-        }));
+        // กรองแถวที่มี code ว่าง (ถ้าต้องการแสดงทั้งหมด ให้ลบ filter นี้)
+        data = data.filter(d => d.code !== "" || d.name !== "");
 
-        if (data.length === 0) throw new Error("ไม่พบข้อมูลในชีต SHOW");
+        if (data.length === 0) throw new Error("ไม่พบข้อมูลในชีต SHOW (หรือรูปแบบคอลัมน์ผิด)");
 
         renderTable();
         errorBox.textContent = "";
@@ -271,36 +323,57 @@
         console.error("❌ โหลดข้อมูลไม่สำเร็จ:", error);
         tableBody.innerHTML = `<tr><td colspan="5" style="color:red;">ไม่สามารถโหลดข้อมูลได้</td></tr>`;
         errorBox.textContent = "❌ " + error.message;
+
+        // เปิด debug box อัตโนมัติ เพื่อช่วยเช็ค response (ถ้าต้องการปิด ให้ลบบรรทัดนี้)
+        debugBox.style.display = "block";
       }
     }
 
     function renderTable(filteredData = data) {
       tableBody.innerHTML = filteredData
         .map(
-          e => `
+          (e, index) => `
           <tr>
-            <td>${e.code}</td>
-            <td>${e.name}</td>
-            <td>${e.location}</td>
-            <td>${e.status}</td>
-            <td><button class="detail-btn">ดูเพิ่มเติม</button></td>
+            <td>${escapeHtml(e.code)}</td>
+            <td>${escapeHtml(e.name)}</td>
+            <td>${escapeHtml(e.location)}</td>
+            <td>${escapeHtml(e.status)}</td>
+            <td>
+              <button class="detail-btn" data-index="${index}">ดูเพิ่มเติม</button>
+              <a href="detail.html?id=${encodeURIComponent(e.code)}" style="margin-left:8px; font-size:0.9em;">หน้าเต็ม</a>
+            </td>
           </tr>
         `
         )
         .join("");
 
-      document.querySelectorAll(".detail-btn").forEach((btn, i) => {
+      // เพิ่ม event listener ให้ปุ่มทั้งหมดย้ำ ๆ
+      document.querySelectorAll(".detail-btn").forEach((btn) => {
         btn.addEventListener("click", () => {
+          const i = Number(btn.getAttribute("data-index"));
+          const row = filteredData[i];
           modalDetails.innerHTML = `
-            <h3>${filteredData[i].name}</h3>
-            <p><strong>รหัส:</strong> ${filteredData[i].code}</p>
-            <p><strong>ที่อยู่:</strong> ${filteredData[i].location}</p>
-            <p><strong>สถานะ:</strong> ${filteredData[i].status}</p>
-            <p>${filteredData[i].details || ""}</p>
+            <h3>${escapeHtml(row.name || "ไม่ระบุชื่อ")}</h3>
+            <p><strong>รหัส:</strong> ${escapeHtml(row.code || "-")}</p>
+            <p><strong>ที่อยู่:</strong> ${escapeHtml(row.location || "-")}</p>
+            <p><strong>สถานะ:</strong> ${escapeHtml(row.status || "-")}</p>
+            <p><strong>รายละเอียด:</strong> ${escapeHtml(row.details || "-")}</p>
+            <p style="font-size:12px;color:#666;">(แถวที่ ${row.rawRowIndex} ใน response)</p>
           `;
           modal.style.display = "block";
         });
       });
+    }
+
+    // ป้องกัน XSS เล็ก ๆ ด้วยการ escape ข้อความก่อนใส่ลง DOM
+    function escapeHtml(str) {
+      if (typeof str !== "string") return str ?? "";
+      return str
+        .replaceAll("&", "&amp;")
+        .replaceAll("<", "&lt;")
+        .replaceAll(">", "&gt;")
+        .replaceAll('"', "&quot;")
+        .replaceAll("'", "&#39;");
     }
 
     closeModal.onclick = () => (modal.style.display = "none");
@@ -309,18 +382,9 @@
     };
 
     searchInput.addEventListener("input", e => {
-      const keyword = e.target.value.toLowerCase();
-      const filtered = data.filter(
-        item =>
-          item.code.toLowerCase().includes(keyword) ||
-          item.name.toLowerCase().includes(keyword) ||
-          item.location.toLowerCase().includes(keyword) ||
-          item.status.toLowerCase().includes(keyword)
-      );
-      renderTable(filtered);
-    });
-
-    loadEquipment();
-  </script>
-</body>
-</html>
+      const keyword = e.target.value.trim().toLowerCase();
+      const filtered = data.filter(item =>
+        (item.code || "").toLowerCase().includes(keyword) ||
+        (item.name || "").toLowerCase().includes(keyword) ||
+        (item.location || "").toLowerCase().includes(keyword) ||
+        (item.status ||
